# pipeplotly

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PIPE_OPERATOR_GUIDE.md  PIPE_OPERATOR_QUICKREF.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: basic_usage.ipynb  pipe_operator_examples.ipynb  pipeframe_integration.py
pipeplotly/: __init__.py  verbs.py
pipeplotly/backends/: __init__.py  base.py  plotly_backend.py  plotnine_backend.py
pipeplotly/core/: __init__.py  plot.py  state.py
pipeplotly/themes/: __init__.py  presets.py
pipeplotly/utils/: __init__.py  helpers.py  validation.py
tests/: test_aesthetic_fix.py  test_plot.py
